css/mobile.css
/**
 * This file provides style changes for small screens.
 */

@media only screen and (min-width: 951px) {
  #kiwiki nav.tools > div#open-search {
    display: none;
  }
  
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper a.wikilogo {
    gap:15px;
  }
}

@media only screen and (max-width: 950px) {
  #kiwiki h1 {
    font-size: 1.9rem;
  }
  #kiwiki h2 {
    font-size: 1.6rem;
  }
  #kiwiki h3 {
    font-size: 1.3em;
  }

  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper .wikilogo {
   gap:5px;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper .wikilogo img {
    height: 40px;
    min-width: 40px;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper .wikilogo .logo-img{
    height: 40px;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper a.wikilogo > div {
    font-size:14px;
    letter-spacing: 0;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper #dw__search {
    order: 3;
    min-width: initial;
    padding-bottom: 10px;
    display: none;
    width: 100%;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper #dw__search.open {
    display: block;
    width: 100%;
  }
  #kiwiki #dokuwiki__header {
    padding: 0 5px;
    margin: 0;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper {
    flex-wrap: wrap;
    gap: 0;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper .group {
    order: 1;
  }
  #kiwiki #dokuwiki__header > .dokuwiki__header__wrapper nav {
    order: 2;
    flex-wrap: nowrap;
    gap: 8px;
  }
  #kiwiki nav.tools > div > strong svg {
    width: 24px;
    height: 24px;
  }
  #dokuwiki__pagetools {
    position: absolute;
    cursor: pointer;
    right: 10px;
    top: 10px;
  }
  #kiwiki nav.tools > div#dokuwiki__pagetools > ul {
    right: -35px;
  }

  #kiwiki .before-content > .breadcrumbs {
    margin: 10px auto;
    padding: 0 50px;
    width: fit-content;
  }
  #kiwiki .kiwiki_aside{
    width: 100%;
    float: none;
    margin-bottom:0;
    order: 1;
    z-index: 8;
    position: sticky;
    top: 0;
  }
  #kiwiki .kiwiki_aside .dokuwiki__aside_wrapper {
    gap: 0;
    flex-direction: column-reverse;
  }
  #kiwiki #dokuwiki__site #dokuwiki__top #dokuwiki__content__wrapper {
    position: relative;
  }


  #kiwiki .kiwiki_aside .dokuwiki__aside_wrapper #dw__toc {
    position: sticky;
    width: 100%;
    top:0;
  }

  #kiwiki .kiwiki_aside  .dokuwiki__aside_wrapper > div {
    padding: 0;
    overflow: hidden;
    display: flex;
    flex-direction: column;
  }

  #kiwiki .kiwiki_aside h3 {
    font-size: 18px;
    padding: 10px 5px;
    text-transform: uppercase;
  }
  #kiwiki .kiwiki_aside .dokuwiki__aside_wrapper > div.kiwiki-sidebar
   {
    display: none;
  }

  #kiwiki .kiwiki-sidebar-mobile{
    display: flex;
    margin-top: 20px;
  }

  #kiwiki .kiwiki_aside > div {
    margin: 0;
  }

  #kiwiki #dokuwiki__content {
    width: 100%;
    float: none;
    margin-left: 0;
    margin-right: 0;
    order: 2;
  }
  #kiwiki #dokuwiki__site #dokuwiki__content__wrapper {
    width: 100%;
    max-width: initial;
    flex-direction: column;
    flex-wrap: wrap;
  }
  #kiwiki #dokuwiki__content > .group {
    margin-left: 0;
    padding: 0;
  }
  #kiwiki #dokuwiki__content > .group > .page.group {
    padding: 15px;
  }
  #kiwiki #dokuwiki__content ul {
    padding: 0 0 0 20px;
  }
  #kiwiki #dokuwiki__content ul.admin_tasks {
    padding: 0;
  }
  #kiwiki [dir="rtl"] .hasSidebar #dokuwiki__content > div {
    margin-right: 0;
  }

  #kiwiki #dokuwiki__header .a11y.skip,
  #kiwiki #dokuwiki__aside hr.a11y {
    left: auto !important;
    top: auto !important;
    width: auto !important;
    height: auto !important;
    position: static !important;
  }

  #kiwiki [dir="rtl"] #dokuwiki__header .a11y.skip,
  #kiwiki [dir="rtl"] #dokuwiki__aside hr.a11y {
    right: auto !important;
    left: 1em !important;
  }

  #kiwiki .tools {
    text-align: left;
  }

  #kiwiki [dir="rtl"] .tools {
    text-align: right;
  }
  #kiwiki #dokuwiki__content > .other,
  #kiwiki #dokuwiki__content > .other ul {
    flex-wrap: wrap;
  }

  #kiwiki pre {
    word-wrap: break-word;
  }
  #kiwiki .kiwiki-edit {
    left: initial;
    right: 4px;
    width: fit-content;
  }
  /*EXTENSIONS*/
  #kiwiki #extension__list .legend > div {
    grid-template-columns: 20% 80%;
    border-right: 0;
    border-bottom: 1px solid var(--kiwiki-ui-300);
    padding-bottom: 15px;
  }
  #kiwiki #dokuwiki__content #extension__list ul.extensionList {
    padding: 0;
  }
  #kiwiki #extension__list ul.extensionList li {
    display: flex;
    flex-direction: column;
    gap: 15px;
    justify-content: center;
    background-color: var(--kiwiki-ui-300);
    border-radius: 10px;
    border: 0;
  }

  #kiwiki #extension__list .legend,
  #kiwiki #extension__manager .actions {
    width: 100%;
    float: none;
    display: flex;
    justify-content: center;
  }

  #kiwiki #extension__list .legend dl.details {
    border-radius: 0;
  }
  #kiwiki #extension__list.hasDisplayOptions .enabled,
  #kiwiki #extension__list.hasDisplayOptions .disabled,
  #kiwiki #extension__list.hasDisplayOptions .updatable {
    display: none;
  }
  #kiwiki #extension__list.hasDisplayOptions.enabled .enabled,
  #kiwiki #extension__list.hasDisplayOptions.disabled .disabled,
  #kiwiki #extension__list.hasDisplayOptions.updatable .updatable {
    display: flex;
  }

  #kiwiki .before-content {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }
  #dokuwiki__right_before{
    width: 100%;
    justify-content: center;
  }

  /*Main Menu*/
  .kiwiki-main-menu__wrapper #kiwiki-main-menu__close {
    top: 5px;
    left:-18px;
  }

  /*GO TOP/BOTTOM*/
  #kiwiki #go {
    flex-direction: column;
  }
} /* /@media */

